@@ -1,3 +1,15 @@
+Mon Apr 18 04:45:24 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* fixnum-buffer.c: fairy_fixnum_buffer_free()でfb->fixunumsがNULL
+	  の時の対応をした. fb->capaの設定をfairy_fixnum_buffer_alloc()から
+	  fairy_fixnum_buffer_initializeに変更した.
+	* p-group-by.c: rb_xmsb(_store_2ndmemory_obj)で余分なものを削除した.
+	* p-xgroup-by.c: fairy_p_xgroup_by_mark()でマークをより厳密にチェッ
+	  クするようにした. fairy_p_xgroup_by_free()でフリーを忘れてい
+	  た. start_main_i()でvolatileをつけてみた.
+	* controller.rb, processor.rb: 接続の切れたprocessorを識別できるよ
+	  うにした.
+	
 Fri Apr 15 18:16:03 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* log.rb: 例外がnilの時の対処をした.
